syntax = "proto3";

package test;

import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "../../common.proto";

service TestService {
  rpc PublicMethod(google.protobuf.Empty) returns (google.protobuf.Empty) {
    // No permissions - this method was publicly accessible
  }
}