syntax = "proto3";

package test;

import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "../../common.proto";

service TestService {
  rpc MyMethod(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (qdrant.cloud.common.v1.permissions) = "read:data";
    option (qdrant.cloud.common.v1.permissions) = "write:data";
    option (qdrant.cloud.common.v1.requires_all_permissions) = false; // OR
  }
}