syntax = "proto3";

package test;

import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "../../common.proto";

service TestService {
  rpc FlexibleMethod(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (qdrant.cloud.common.v1.permissions) = "read:basic";
    option (qdrant.cloud.common.v1.permissions) = "read:advanced"; // Added permission
    option (qdrant.cloud.common.v1.requires_all_permissions) = false; // OR logic
  }
}